argocd/media/server/aurral/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aurral
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aurral
  template:
    metadata:
      labels:
        app: aurral
    spec:
      containers:
      - name: aurral
        image: ghcr.io/lklynet/aurral:latest
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: data
        - name: data
          mountPath: /config
          subPath: config
        ports:
        - containerPort: 3001
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: aurral-data
