argocd/media/server/aurral/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aurral
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
  selector:
    app: aurral
